try hello_controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+<div data-controller="hello">
+    <p>everything in here will change</p>
+    <p>if you like it or not</p>
+</div>
