create stimulus controller & use it

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,3 +4,14 @@
     <p>everything in here will change</p>
     <p>if you like it or not</p>
 </div>
+
+<div>
+    <div data-controller="toggle">
+        <span data-action="click->toggle#toggle">Click me to activate the toggle_controller.toggle() function.</span>
+        <ul data-toggle-target="content" class="hidden">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+    </div>
+</div>
